@@ -33,7 +33,8 @@ typedef enum {
   DC1394_BAYER_METHOD_HQLINEAR,
   DC1394_BAYER_METHOD_DOWNSAMPLE,
   DC1394_BAYER_METHOD_EDGESENSE,
-  DC1394_BAYER_METHOD_VNG
+  DC1394_BAYER_METHOD_VNG,
+  DC1394_BAYER_METHOD_AHD
 } dc1394bayer_method_t;
 #define DC1394_BAYER_METHOD_MIN      DC1394_BAYER_METHOD_NEAREST
 #define DC1394_BAYER_METHOD_MAX      DC1394_BAYER_METHOD_EDGESENSE
